--- a/index.html
+++ b/index.html
@@ -357,6 +357,42 @@
 		</form>
 		
 	</div>
+	
+		<div class="citar">
+
+		<form>
+			<h4 class="citartitulo" id="citar7">Introduce los datos de la imagen a citar</h4>
+
+			<table>
+				<tr>
+					<td><label>Titulo de la imagen:</label></td>
+					<td><input type="text" name="" id="titulo_img" required="" placeholder="Escriba aqui por favor:"></td>
+				</tr>
+				<tr>
+					<td><label>Autor o autores:</label></td>
+					<td><input type="text" name="" id="autor_img" required="" placeholder="Escriba aqui por favor:"></td>
+				</tr>
+				<tr>
+					<td><label>Año de publicacion:</label></td>
+					<td><input type="text" name="" id="fecha_img" required="" placeholder="Escriba aqui por favor:"></td>
+				</tr>
+				<tr>
+					<td><label>Fuente (pagina web):</label></td>
+					<td><input type="text" name="" id="fuente_img" required="" placeholder="Escriba aqui por favor:"></td>
+				</tr>
+				<tr>
+					<td><label>Tipo de licencia:</label></td>
+					<td><input type="text" name="" id="licencia_img" required="" placeholder="Escriba aqui por favor:"></td>
+			</table>
+
+			<button type="button" onclick="citaropcion7();">Haz click aqui para citar</button>
+
+			<p class="parrafo_citar1">Su cita es:</p>
+			<p class="parrafo_citar2">Nota. Adaptado de <span id="res_titulo_img"></span>, de <span id="res_autor_img"></span>, <span id="res_fecha_img"></span>, <span id="res_fuente_img"></span>. <span id="res_licencia_img"></span>.</p>
+
+		</form>
+		
+	</div>
 
 		<div class="informacion">
 			<h2 class="apainformacion">Citas y Referencias:</h2>
