--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 		<img src="imagenes/citarvideo.png" alt="Icono de video">
 		<h4>Para citar un video haz click <a href="#citar6">aqui</a> para continuar.</h4>
 	</div>
+	
+	<div class="opcion_de_citar7">
+
+		<img src="imagenes/citarimagen.png" alt="Icono de imagen">
+		<h4>Para citar una imagen haz click <a href="#citar7">aqui</a> para continuar.</h4>
+	</div>
 
 	<br>
 
